# neuralcontrol

./: CMakeLists.txt  README.md  common.py  quasi_static_task_any_node.py  quasi_static_task_letter_curve.py  quasi_static_task_middle_tracking.py  setup.py  stateful_tangent_operator.py  sto_adapter.py  trajectory.py  utils.py
inputs/: C_initial.txt  M_initial.txt  vertices.txt
src/: app.cpp  bendingCompute.cpp  bendingCompute.h  dampingForce.cpp  dampingForce.h  eigenIncludes.h  elasticBendingForce.cpp  elasticRod.cpp  elasticRod.h  elasticStretchingForce.cpp  elasticStretchingForce.h  elasticTwistingForce.cpp  elasticTwistingForce.h  externalGravityForce.cpp  externalGravityForce.h  inertialForce.cpp  inertialForce.h  setInput.cpp  setInput.h  solver.cpp  solver.h  timeStepper.cpp  timeStepper.h  world.cpp  world.h
targets/: target_C.txt  target_C_flipped.txt  target_M.txt  target_U.txt
